run downstream jobs

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -109,107 +109,105 @@ jobs:
       - name: Downstream run
         run: ./build-downstream/bin/ShowActsVersion
 
-  # linux_examples_test:
-  #   runs-on: ubuntu-latest
-  #   container: ghcr.io/acts-project/ubuntu2404:63
-  #   needs: [linux_ubuntu]
-  #   env:
-  #     ACTS_SEQUENCER_DISABLE_FPEMON: true
-  #
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: true
-  #         lfs: true
-  #
-  #     - name: Set dependencies URL
-  #       run: echo "DEPENDENCY_URL=https://acts.web.cern.ch/ACTS/ci/ubuntu-24.04/deps.${DEPENDENCY_TAG}.tar.zst" >> $GITHUB_ENV
-  #
-  #     - name: Install dependencies
-  #       run: CI/dependencies.sh
-  #
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: acts-linux-ubuntu
-  #
-  #     - name: Unpack build
-  #       run: mkdir build && tar xf build.tar.gz -C build
-  #
-  #     - name: Python level tests
-  #       shell: bash
-  #       env:
-  #         PYTEST_MD_REPORT: true
-  #         PYTEST_MD_REPORT_VERBOSE: 0
-  #         PYTEST_MD_REPORT_OUTPUT: pytest.md
-  #       run: >
-  #         geant4-config --install-datasets
-  #         && source build/this_acts_withdeps.sh
-  #         && python3 -m pip install -r Examples/Python/tests/requirements.txt
-  #         && python3 -m pip install pytest-md-report
-  #         && pytest -rFsv -k "not exatrkx" -v
-  #         && cat ${PYTEST_MD_REPORT_OUTPUT} >> $GITHUB_STEP_SUMMARY
-  #
-  # linux_physmon:
-  #   runs-on: ubuntu-latest
-  #   container: ghcr.io/acts-project/ubuntu2404:63
-  #   needs: [linux_ubuntu]
-  #   env:
-  #     ACTS_SEQUENCER_DISABLE_FPEMON: true
-  #
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: true
-  #         lfs: true
-  #
-  #     - run: apt-get update && apt-get install -y time
-  #
-  #     - name: Set dependencies URL
-  #       run: echo "DEPENDENCY_URL=https://acts.web.cern.ch/ACTS/ci/ubuntu-24.04/deps.${DEPENDENCY_TAG}.tar.zst" >> $GITHUB_ENV
-  #
-  #     - name: Install dependencies
-  #       run: CI/dependencies.sh
-  #
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: acts-linux-ubuntu
-  #
-  #     - name: Unpack build
-  #       run: mkdir build && tar xf build.tar.gz -C build
-  #
-  #     - name: Save PR number
-  #       if: ${{ github.event_name == 'pull_request' }}
-  #       run: |
-  #         mkdir -p physmon
-  #         echo ${{ github.event.number }} > physmon/pr_number
-  #         echo ${{ github.event.pull_request.head.sha }} > physmon/sha
-  #
-  #     - name: Physics performance checks
-  #       shell: bash
-  #       run: >
-  #         echo "::group::Dependencies"
-  #         && git config --global safe.directory "$GITHUB_WORKSPACE"
-  #         && python3 -m pip install histcmp==0.6.8 matplotlib
-  #         && python3 -m pip install -r Examples/Scripts/requirements.txt
-  #         && geant4-config --install-datasets
-  #         && venv_python=$(which python3)
-  #         && echo $venv_python
-  #         && source build/this_acts_withdeps.sh
-  #         && export PATH=$(dirname $venv_python):$PATH
-  #         && echo $PATH
-  #         && which python3
-  #         && echo "::endgroup::"
-  #         && CI/physmon/phys_perf_mon.sh all physmon
-  #
-  #     - name: Post step summary
-  #       if: always()
-  #       run: cat physmon/summary.md >> $GITHUB_STEP_SUMMARY
-  #
-  #     - uses: actions/upload-artifact@v4
-  #       if: always()
-  #       with:
-  #         name: physmon
-  #         path: physmon
+  linux_examples_test:
+    runs-on: ubuntu-latest
+    container: ghcr.io/acts-project/ubuntu2404:63
+    needs: [linux_ubuntu]
+    env:
+      ACTS_SEQUENCER_DISABLE_FPEMON: true
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          lfs: true
+
+      - name: Install dependencies
+        uses: ./.github/actions/dependencies
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: acts-linux-ubuntu
+
+      - name: Unpack build
+        run: mkdir build && tar xf build.tar.gz -C build
+
+      - name: Python level tests
+        shell: bash
+        env:
+          PYTEST_MD_REPORT: true
+          PYTEST_MD_REPORT_VERBOSE: 0
+          PYTEST_MD_REPORT_OUTPUT: pytest.md
+        run: >
+          geant4-config --install-datasets
+          && source build/this_acts_withdeps.sh
+          && python3 -m pip install -r Examples/Python/tests/requirements.txt
+          && python3 -m pip install pytest-md-report
+          && pytest -rFsv -k "not exatrkx" -v
+          && cat ${PYTEST_MD_REPORT_OUTPUT} >> $GITHUB_STEP_SUMMARY
+
+  linux_physmon:
+    runs-on: ubuntu-latest
+    container: ghcr.io/acts-project/ubuntu2404:63
+    needs: [linux_ubuntu]
+    env:
+      ACTS_SEQUENCER_DISABLE_FPEMON: true
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          lfs: true
+
+      - run: apt-get update && apt-get install -y time
+
+      - name: Install dependencies
+        uses: ./.github/actions/dependencies
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: acts-linux-ubuntu
+
+      - name: Unpack build
+        run: mkdir build && tar xf build.tar.gz -C build
+
+      - name: Save PR number
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          mkdir -p physmon
+          echo ${{ github.event.number }} > physmon/pr_number
+          echo ${{ github.event.pull_request.head.sha }} > physmon/sha
+
+      - name: Physics performance checks
+        shell: bash
+        run: >
+          echo "::group::Dependencies"
+          && git config --global safe.directory "$GITHUB_WORKSPACE"
+          && python3 -m pip install histcmp==0.6.8 matplotlib
+          && python3 -m pip install -r Examples/Scripts/requirements.txt
+          && geant4-config --install-datasets
+          && venv_python=$(which python3)
+          && echo $venv_python
+          && source build/this_acts_withdeps.sh
+          && export PATH=$(dirname $venv_python):$PATH
+          && echo $PATH
+          && which python3
+          && echo "::endgroup::"
+          && CI/physmon/phys_perf_mon.sh all physmon
+
+      - name: Post step summary
+        if: always()
+        run: cat physmon/summary.md >> $GITHUB_STEP_SUMMARY
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: physmon
+          path: physmon
   #
   # linux_physmon_perf_report:
   #   needs: [linux_physmon]
@@ -272,7 +270,7 @@ jobs:
         id: ccache-restore
         with:
           path: ${{ env.CCACHE_DIR }}
-          key: ccache-${{ runner.os  }}-${{ github.job }}-${{ matrix.image }}-${{ matrix.std }}-${{ matrix.compiler }}-${{ env.CCACHE_KEY_SUFFIX }}-${{ github.sha }}
+          key: ccache-${{ runner.os  }}-${{ github.job }}-${{ env.CCACHE_KEY_SUFFIX }}-${{ matrix.image }}-${{ matrix.std }}-${{ matrix.compiler }}-${{ github.sha }}
           restore-keys: |
             ccache-${{ runner.os  }}-${{ github.job }}-${{ env.CCACHE_KEY_SUFFIX }}-
 
@@ -349,10 +347,6 @@ jobs:
           restore-keys: |
             ccache-${{ runner.os  }}-${{ github.job }}-${{ env.CCACHE_KEY_SUFFIX }}-
 
-      # - uses: mxschmitt/action-tmate@v3
-        # if: failure()
-
-
       - name: Configure
         run: >
           ccache -z &&
@@ -393,7 +387,6 @@ jobs:
           -GNinja
           -DCMAKE_BUILD_TYPE=Release
           -DCMAKE_CXX_FLAGS=-Werror
-          -DCMAKE_CXX_STANDARD=20
           -DCMAKE_PREFIX_PATH="${INSTALL_DIR}"
 
       - name: Downstream build
